--- a/prpr/Cargo.toml
+++ b/prpr/Cargo.toml
@@ -23,13 +23,13 @@ csv = "1.1.6"
 fastblur = "0.1.1"
 fluent = "0.16.0"
 fluent-syntax = "0.11.0"
-glyph_brush = "0.7.5"
+glyph_brush = "=0.7.2"
 image = "0.24"
 intl-memoizer = "0.5.1"
 lru = "0.9.0"
 lyon = "1.0.1"
-macroquad = { git = "https://github.com/2278535805/prpr-macroquad", default-features = false }
-miniquad = { git = "https://github.com/2278535805/prpr-miniquad" }
+macroquad = { git = "https://github.com/Mivik/prpr-macroquad", default-features = false }
+miniquad = { git = "https://github.com/Mivik/prpr-miniquad" }
 nalgebra = "*"
 once_cell = "1.16.0"
 ordered-float = "3.4.0"
@@ -66,7 +66,7 @@ prpr-avc = { path = "../prpr-avc" }
 lazy_static = "1.5.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-rfd = { version = "0.15.3", default-features = false, features = ["gtk3"] }
+rfd = "0.10"
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "*"
